--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@GataNina-Li/ln",
+  "name": "@gatanina-li/ln",
   "version": "1.1.0",
   "description": "A simple and lightweight multilingual (i18n) system built with TypeScript, supporting local or online translations",
   "type": "module",
